bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value chargetIndication
    if (chargetIndication()='R') {
        ^BDR:5: error: not found: value char
    if (char getIndication()='L') {
        ^BDR:8: error: not found: value char
    if (char getIndication()='I') {
        ^BDR:11: error: not found: value char
    if (char getIndication()='A') {
        ^BDR:14: error: not found: value char
    if (char getIndication()='B') {
        ^BDR:17: error: not found: value char
    if (char getIndication()='C') {
        ^BDR:20: error: not found: value char
    if (char getIndication()='Z') {
        ^BDR:23: error: not found: value char
    if (char getIndication()='Y') {
        ^BDR:26: error: not found: value char
    if (char getIndication()='X') {
        ^