bdr.BDR.scala.code
while (isOverMessage()) {
  	if (chargetIndication()='R') {
      right() ; forward() ;
    }
    if (char getIndication()='L') {
      left() ; forward() ;
    }
    if (char getIndication()='I') {
      left() ; left() ; forward() ;
    }
    if (char getIndication()='A') {
      forward() ;
    }
    if (char getIndication()='B') {
      forward() ; forward() ;
    }
    if (char getIndication()='C') {
      forward() ; forward() ; forward() ;
    }
    if (char getIndication()='Z') {
      backward() ;
    }
    if (char getIndication()='Y') {
      backward() ; backward()
    }
    if (char getIndication()='X') {
      backward() ; backward() ; backward() ;
    }
}